--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,10 +93,8 @@ markdown_extensions:
       permalink: true
       title: "On this page"
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 plugins:
   - search:
       lang: en
-  - git-revision-date-localized:
-      enable_creation_date: true
