🎨 Add custom sidebar styling with light grey theme
- Added custom CSS overrides for sidebar styling
- Light grey background (#f8f9fa) for left sidebar
- Improved contrast and visual hierarchy
- Better hover states and active link highlighting
- Clean, professional appearance

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,7 @@ theme:
     success: material/check-circle
   logo: public/logo.svg
   favicon: public/favicon.ico
+  custom_dir: docs/overrides
 nav:
   - Home: index.md
   - Introduction:
