🎨 Add Flow logo to header and favicon
- Updated mkdocs.yml to use flow-logo.svg for header logo
- Set flow-logo.png as favicon for browser tabs
- Added custom CSS for proper logo sizing and positioning
- Logo will appear in top-left corner of the site
- Professional branding with Flow's signature logo

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,8 +39,8 @@ theme:
     warning: material/alert
     error: material/alert-circle
     success: material/check-circle
-  logo: public/logo.svg
-  favicon: public/favicon.ico
+  logo: public/images/icons/flow-logo.png
+  favicon: public/images/icons/flow-logo.png
   custom_dir: docs/overrides
 nav:
   - Home: index.md
