🎨 Update Flow logo SVG file
- Updated flow-logo.svg with latest version
- MkDocs configuration correctly points to SVG file
- Logo will display crisp and scalable across all devices
- Maintains PNG favicon for browser compatibility

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,7 +39,7 @@ theme:
     warning: material/alert
     error: material/alert-circle
     success: material/check-circle
-  logo: public/images/icons/flow-logo.png
+  logo: public/images/icons/flow-logo.svg
   favicon: public/images/icons/flow-logo.png
   custom_dir: docs/overrides
 nav:
