--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,8 +39,8 @@ theme:
     warning: material/alert
     error: material/alert-circle
     success: material/check-circle
-  logo: public/images/icons/flow-logo.svg
-  favicon: public/images/icons/flow-logo.png
+  logo: images/flow-logo.svg
+  favicon: images/flow-logo.png
   custom_dir: docs/overrides
 nav:
   - Home: index.md
