🔄 Ensure collapsible sidebar sections are enabled
- Explicitly set navigation.expand to true for section expand/collapse
- Sections are now expandable/collapsible with chevron icons
- Users can click section headers to toggle visibility
- Improves navigation for sites with multiple levels

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ theme:
   features:
     - navigation.footer
     - navigation.sections
-    - navigation.expand
+    - navigation.expand: true
     - search.highlight
     - search.share
     - content.code.copy
