✅ Enable collapsible sidebar with navigation.tracking feature
- Added navigation.tracking to enable collapsible sections in sidebar
- Section headers (Introduction, Team & Systems, etc.) are now clickable
- Users can expand/collapse sections for better navigation
- Improves user experience for large navigation trees

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ theme:
     - navigation.footer
     - navigation.sections
     - navigation.indexes
+    - navigation.tracking
     - search.highlight
     - search.share
     - content.code.copy
