docs: publish Front Desk Shifts SOP v1.1
- Published Front Desk Shifts SOP v1.1 with comprehensive process tables
- Added process owner, escalation ladder, and quality metrics
- Included weekend coverage and handoff requirements
- Updated mkdocs.yml navigation to include new SOP
- Removed empty daily-morning-property-walkthrough-sop.md file

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,6 +64,7 @@ nav:
           - Move-in SOP: operating-manual-sops/foundational-journey/move-in-sop.md
           - Unit Move-in Readiness SOP: operating-manual-sops/foundational-journey/unit-move-in-readiness-sop.md
       - Care – Everyday Moments:
+          - Front Desk Shifts SOP: operating-manual-sops/care-everyday-moments/front-desk-shifts-sop.md
           - Neighbor Communication SOP: operating-manual-sops/care-everyday-moments/neighbor-communication-sop.md
           - Fair Housing Act Compliance SOP: operating-manual-sops/care-everyday-moments/fair-housing-act-compliance-sop.md
           - Flow Minibar Experience SOP: operating-manual-sops/care-everyday-moments/flow-minibar-experience-sop.md
