--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,6 +65,7 @@ nav:
           - Unit Move-in Readiness SOP: operating-manual-sops/foundational-journey/unit-move-in-readiness-sop.md
       - Care – Everyday Moments:
           - Front Desk Shifts SOP: operating-manual-sops/care-everyday-moments/front-desk-shifts-sop.md
+          - GM Weekly Reporting Dashboard Review SOP: operating-manual-sops/care-everyday-moments/gm-weekly-reporting-dashboard-review-sop.md
           - Neighbor Communication SOP: operating-manual-sops/care-everyday-moments/neighbor-communication-sop.md
           - Fair Housing Act Compliance SOP: operating-manual-sops/care-everyday-moments/fair-housing-act-compliance-sop.md
           - Flow Minibar Experience SOP: operating-manual-sops/care-everyday-moments/flow-minibar-experience-sop.md
